--- a/code/style.css
+++ b/code/style.css
@@ -217,7 +217,7 @@ nav a {
 
 .news-3 h2 {
   font-size: 18px;
-  margin: 0px 0px 0px 10px;
+  margin-left: 15px;
 }
 
 .news-3 p {
@@ -297,7 +297,7 @@ footer p {
   /** HEADLINE NEWS SECTION**/
 
   .news-1 h2 {
-    font-size: 40px;
+    font-size: 42px;
   }
 
   /** BIG NEWS SECTION **/
@@ -307,11 +307,14 @@ footer p {
   }
 
   .news-2 h2 {
-    font-size: 28px;
+    font-size: 30px;
   }
 
   .news-2 p {
     display: inline;
+
+    font-size: 14px;
+    margin: 0px;
   }
 
   .news-2 img {
