--- a/code/style.css
+++ b/code/style.css
@@ -433,7 +433,7 @@ footer p {
 
   .news-1 p {
     display: inline;
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .biggest img {
@@ -470,7 +470,7 @@ footer p {
   }
 
   .news-3 {
-    align-items: center;
+    align-items: stretch;
     justify-content: flex-start;
 
     width: 33%;
