Added a min-width to body.

--- a/code/style.css
+++ b/code/style.css
@@ -3,6 +3,7 @@ body {
   color: #121212;
   Font-family: Helvetica;
   Margin: 0; 
+  min-width: 200px;
 }
 
 h1 {
@@ -66,14 +67,6 @@ p {
 .logo-1 {
   width: 200px;
 }
-
-/* .articles-header img, 
-.contact-header img, 
-.hamburgermenu-header img, 
-.about-header img, 
-.subscribe-header img {
-  width: 200px;
-} */
 
 .logo-3 {
   width: 200px;
@@ -226,6 +219,7 @@ footer {
   border-radius: 3px;
   width: 90%;
   max-width: 1400px; 
+  min-width: 200px;
   margin: 0 auto;
 }
 
