--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #212529;
+  
 }
   
 /*------Flex container starts here------*/
@@ -69,13 +70,67 @@ a.home1, .politics1, .home2, .politics, .sport, .culture {
   padding:28px 16px 0 16px ;
   font-weight: bold;
 }
+
+/*---DROPDOWN starts here---*/
+  
+.dropbtn {
+  background-color: #FFE401;
+  color: black;
+  padding: 16px;
+  font-size: 76px;
+  border: none;
+  cursor: pointer;
+}
+  
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+  
+.dropdown-content {
+  display: none;
+  position:absolute; 
+  background-color: #c9bb40; 
+  width: 432px;
+  height: 600px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+  
+.dropdown-content a {
+  color: black;
+  margin: 50px;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-size: 76px;
+  font-weight: bold;
+}
+  
+.dropdown-content a:hover {
+  background-color: #aca036;
+  width: 250px;
+  height: 100px;
+} 
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+  
+.dropdown:hover .dropbtn {
+  background-color: #c9bb40;
+}
+  
+.dropdown .dropbtn img {
+  width: 250px;
+  height: 200px;
+}
+  
+/*---DROPDOWN ends here---*/
   
 /*------Flex Container ends here------*/
 
-
-
-
-
+/*---------------------------------------------------------*/
 
 /*------Big News starts here------*/
 
@@ -123,12 +178,7 @@ a.home1, .politics1, .home2, .politics, .sport, .culture {
   justify-content: center;
   font-size: 22px;
 }
-  
-.text2 {
-  width: 60%;
-  align-items: center;
-  justify-content: center;
-}
+
 
 /*---Big News => Figure class starts here---*/
 
@@ -153,15 +203,15 @@ a.home1, .politics1, .home2, .politics, .sport, .culture {
   font-size: 40px;
 } 
 
-/*---Figure class ends here---*/
-
+/*---Big News => Figure class ends here---*/
 
 /*------Big News section ends here------*/
-  
+
+/*---------------------------------------------------------*/
 
 /*------Latest News starts here------*/
 
-.latest { /* gör den kanske gul elelr glittrig eller något */
+.latest { 
   border: 4px solid white;
   border-bottom: 4px solid #212529;
   width: 1200px;
@@ -177,7 +227,7 @@ a.home1, .politics1, .home2, .politics, .sport, .culture {
   animation-iteration-count: infinite;
   animation-direction: alternate;
   display: inline; /* Important */
-  background-color: #FFE401;
+  /*background-color: #FFE401; */
   justify-content:last baseline;
   align-items: flex-end;
   border-radius: 25px;
@@ -195,6 +245,7 @@ a.home1, .politics1, .home2, .politics, .sport, .culture {
 
 /*------Latest News ends here------*/
 
+/*---------------------------------------------------------*/
   
 /*------ OTHER NEWS SECTION starts ------*/
 .other-news {
@@ -221,15 +272,11 @@ a.home1, .politics1, .home2, .politics, .sport, .culture {
   margin-right: auto;
 }
   
-  /* ALLTING NEDANFÖR är nytt, 
-  ska ta bort denna text/kommentar när 
-  jag ska rensa innan inlämning*/
-
 .one a {
   background: #ffffff;
   display: inline-block;
-  margin: 5px 5px 5px ; /* 55px 75px 30px */
-  padding: 15px 15px 25px; /* 15px 15px 30px  */
+  margin: 5px 5px 5px ; 
+  padding: 15px 15px 25px; 
   text-align: center;
   text-decoration: none;
   -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
@@ -241,6 +288,7 @@ a.home1, .politics1, .home2, .politics, .sport, .culture {
   z-index: 0;
   position: relative;
 }
+
 .one a:after {
   color: #333;
   font-size: 25px;
@@ -310,383 +358,248 @@ a.home1, .politics1, .home2, .politics, .sport, .culture {
 
 /*------Other News section ends------*/
 
-/* HÄR ÄR JAG VID RENSNINGEN KL 16:53 21 JANUARI */
+/*---------------------------------------------------------*/
 
-/*--- FOOTER starts here ---*/ 
-  .footer {
-    border: 4px solid rgb(184, 179, 179);
-    height: 35px;
-    display: grid; /* test */
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 5px;
-    flex-wrap: wrap;
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgb(184, 179, 179);
-  }
+/*------FOOTER starts here------*/ 
+.footer {
+  border: 4px solid rgb(184, 179, 179);
+  height: 35px;
+  display: grid; 
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 5px;
+  flex-wrap: wrap;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgb(184, 179, 179);
+}
   
-  .rights {
-    margin: 5px;
-    border-radius: 5px;
-    padding: 5px;
-    color: black;
-    font-weight: bold;
-  }
+.rights {
+  margin: 5px;
+  border-radius: 5px;
+  padding: 5px;
+  color: black;
+  font-weight: bold;
+}
+
+/*------FOOTER ends here------*/ 
+
+/*---------------------------------------------------------*/
+
+/*--------Devices start here--------------*/
+
+/* Big Desktop */
+@media (min-width: 1025px)  {
   
-  
-  
-  
-  /* DROPDOWN  */
-  
-  .dropbtn {
-    background-color: #FFE401;
-    color: black;
-    padding: 16px;
-    font-size: 76px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
+  .ul1 {
     display: none;
-    position:absolute; /*absolute */
-    background-color: #c9bb40; /*  #f9f9f9 */
-    width: 432px;
-    height: 600px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
   }
-  
-  .dropdown-content a {
-    color: black;
-    margin: 50px;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    font-size: 76px;
-    font-weight: bold;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #aca036;
-    width: 250px;
-    height: 100px;} 
 
+  .dropdown { 
+    display: none;
+  } 
   
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
-  .dropdown:hover .dropbtn {
-    background-color: #c9bb40;
-  }
-  
-  .dropdown .dropbtn img {
-    width: 250px;
-    height: 200px;
-  }
-  
-  
-  
-  /*-------- Devices --------------*/
-
-  /* Big Desktop */
-  @media (min-width: 1025px)  {
-    /* .text1 {
-      /*width: 60%;
-      align-items: center;
-      justify-content: center; Finns redan ovan, kan ta bort*/
-      /* font-size: 22px; 
-    } Kan ta bort hela, allt detta finns redan ovan*/
-  
-    .text2 {
-      display: none;
-    } 
-  
-    /*.other-news {
-      height:400px;
-    } Kan ta bort denna, finns redan ovan */ 
-  
-    .ul1 {
-      display: none;
-  
-    }
-  
-    /* .flex-container {
-      justify-content: flex-start;
-    } ser itne ut att behövas, kan ta bort */
-  
-    /* .navbar { /* Ny */
-      /*display: none;
-    } */ /* Kan ta bort */
-  
-    .dropdown { 
-      display: none;
-    } 
-  
-    /* a.home2, .one2, .two, .three {
-      width: 52px;
-    }  */ /* Kan ta bort */
-  
-    /*a.home2, .politics, .sport, .culture {
-      width: 112px;
-      height: 50px;
-      font-size: 28px;
-      padding:28px 16px 0 16px ;
-      font-weight: bold;
-    } Kan ta bort, finns redan ovan*/
-  
-    /* .white {
-        width: 50%;
-      } Kan ta bort, finns redan ovan */
-  
-      .figure {
-      display: none;
+  .figure {
+    display: none;
   } 
 
+}
 
 
+/* Small Desktop */
+@media (min-width: 992px) and (max-width: 1024px)  {
+  .text2 {
+    display: none;
+  } 
+    
+  .ul1 {
+    display: none;
   }
-
-
-  /* Small Desktop */
-  @media (min-width: 992px) and (max-width: 1024px)  {
-    .text2 {
-        display: none;
-      } 
     
-      .ul1 {
-        display: none;
-    
-      }
-    
-    .dropdown { 
-        display: none;
-      } 
+  .dropdown { 
+    display: none;
+  } 
 
-    .figure {
-        display: none;
-    } 
-  
-    
-    }
+  .figure {
+    display: none;
+  } 
+
+}
 
 
-
-  /* Tablet */
+/* Tablet */
 @media (min-width: 768px) and (max-width: 992px) {
-    .text2 {
-        display: none;
-      } 
-    
-      .flex-container {
-          justify-content: center;
-      }
-
-      a.home1, .politics1, .sport, .culture {
-          font-size: 50px;
-          width: 155px;
-          height: 60px;
-      }
-
-      .home2, .politics {
-        display: none;
-      }
-
-    
-      .dropdown { 
-        display: none;
-      } 
-
-      .white {
-          display: flex;
-          justify-content: center;
-          width: 35%;
-          align-items: center;
-      }
-
-    .white img {
-        width: 150px;
-        height: 150px;
-    }
-
-    .other-news {
-        display: flex;
-        height: 1050px;
-       
-    }
-    .one {
-        display: flex;
-        width: 49%;
-        justify-content: center;
-    }
-
-    .one img {
-        width: 550px;
-        height: 200px;
-    }
-
-    .figure {
-        display: none;
-    } 
-  
-    
-
+  .flex-container {
+    justify-content: center;
   }
+
+  a.home1, .politics1, .sport, .culture {
+    font-size: 50px;
+    width: 155px;
+    height: 60px;
+  }
+
+  .home2, .politics {
+    display: none;
+  }
+
+  .dropdown { 
+    display: none;
+  } 
+
+  .white {
+    display: flex;
+    justify-content: center;
+    width: 35%;
+    align-items: center;
+  }
+
+  .white img {
+    width: 150px;
+    height: 150px;
+  }
+
+  .other-news {
+    display: flex;
+    height: 1050px;
+  }
+  .one {
+    display: flex;
+    width: 49%;
+    justify-content: center;
+  }
+
+  .one img {
+    width: 550px;
+    height: 200px;
+  }
+
+  .figure {
+    display: none;
+  } 
+
+  .text {
+    font-size: 30px;
+  }
+
+  .text1 {
+    font-size: 24px;
+  }
+
+  .rights {
+    font-size: 28px;
+    align-items: center;
+  }
+  
+}
 
 
   /* Mobile Device */
-  @media (max-width: 767px) {
-    .latest {
-      height:75px;
-    }
-
-    .latest h1 {
-      font-size: 62px;
-    }
-
-    @keyframes latest {
-      0%   { left:0px; top:0px;}
-      50%  { left:400px; top:0px;}
-      100%  { left:750px; top:0px;}
-    }
-    
-    .figure {
-        width: 1200px;
-        height: 600px;
-        display: flex;
-        justify-content: center;
-    }
-
-    .figure img {
-        width: 1200px;
-        height: 470px;
-        border-radius: 25px;
-    }
-
-    figcaption {
-        width: 1200px;
-        height: 100px;
-    }
-    
-    
-    
-    body {
-        background-color: white;
-      }
-    
-      .ul1, .ul2 {
-        display: none;
-      }
-    
-      img.dropdown-pic {
-        width: 200px;
-        height: 200px;
-      }
-
-      .dropdown .dropbtn img {
-        width: 400px;
-        height: 400px;
-      }
-
-      
-      
-    
-
-      
-      
-    
-      .big-news {
-        height: 600px;
-        width: 1200px;
-      }
-
-
-      /* .big-news img {
-        display: none;
-      } */
-    
-      /* .inside-big .pic {
-        display: none;
-      } */
-    
-      .inside-big {
-        display: none;
-      } 
-   
-    
-
-
-
-
-
-
-
-    
-    .text1 {
-        display: none;
-      } 
-
-    .text2{
-        display: none;
-    }
-    
-      .flex-container {
-          justify-content: center;
-          height: 450px;
-
-      }
-
-      .ul1, .ul2 {
-          display: none;
-      }
-
-    
-      
-
-      .white {
-
-          width: 70%; /* 35% */
-          height: 410px;
-          align-items: center;
-          display: flex;
-          
-
-      }
-
-    .white img {
-        width: 400px;
-        height: 400px;
-        align-items: center;
-    }
-
-    .other-news {
-        display: flex;
-        height: 4000px;
-       
-    }
-    .one {
-        display: flex;
-        width: 100%;
-        justify-content: center;
-    }
-
-    .one img {
-        width: 1000px;
-        height: 500px;
-    }
-
-    .text {
-      font-size: 48px;
-    }
- 
-
-
+@media (max-width: 767px) {
+  .latest {
+    height:75px;
   }
+
+  .latest h1 {
+    font-size: 62px;
+  }
+
+  @keyframes latest {
+    0%   { left:0px; top:0px;}
+    50%  { left:400px; top:0px;}
+    100%  { left:750px; top:0px;}
+  }
+    
+  .figure {
+    width: 1200px;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .figure img {
+    width: 1200px;
+    height: 470px;
+    border-radius: 25px;
+  }
+
+  figcaption {
+    width: 1200px;
+    height: 100px;
+  }
+    
+  body {
+    background-color: white;
+  }
+    
+  .ul1, .ul2 {
+    display: none;
+  }
+    
+  img.dropdown-pic {
+    width: 200px;
+    height: 200px;
+  }
+
+  .dropdown .dropbtn img {
+    width: 400px;
+    height: 400px;
+  }
+  
+  .big-news {
+    height: 600px;
+    width: 1200px;
+  }
+
+  .inside-big {
+    display: none;
+  } 
+
+  .text1 {
+    display: none;
+  } 
+
+  .flex-container {
+    justify-content: center;
+    height: 450px;
+  }
+
+  .ul1, .ul2 {
+    display: none;
+  }
+
+  .white {
+    width: 70%; /* 35% */
+    height: 410px;
+    align-items: center;
+    display: flex;
+  }
+
+  .white img {
+    width: 400px;
+    height: 400px;
+    align-items: center;
+  }
+
+  .other-news {
+    display: flex;
+    height: 4000px;
+  }
+
+  .one {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .one img {
+    width: 1000px;
+    height: 500px;
+  }
+
+  .text {
+    font-size: 48px;
+  }
+ 
+}
   
