--- a/code/style.css
+++ b/code/style.css
@@ -1,25 +1,35 @@
 /*Styling for mobile phone*/
 
+* {
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+
 html {
   background-image: url("/images/material-birchwood.svg");
   color: rgb(43, 36, 23);
   height: 100%;
-  width: 100%;
-  margin: 0;
 }
 
 
 body {
-  height: 100%;
+  height: 100%; 
+}
+
+.container {
   width: 100%;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .header {
-  box-sizing: border-box;
   margin: 0;
+  width: 760px;
   display: grid;
-  justify-content: center;
+  justify-content: flex-start;
   grid-template-columns: 150px 300px ;
   grid-template-rows: 65px 67px;
   grid-template-areas: 
@@ -31,8 +41,8 @@ body {
   width: 100px;
   grid-area: logo;
   padding: 15px;
-  margin: 10px;
-  background-color: none; /*Remove later*/
+  margin: 10px 0 0 40px;
+  
 }
 
   h1.title-name {
@@ -49,7 +59,7 @@ body {
     grid-area: title2;
     font-family: 'Kaushan Script', cursive;
     font-size: 46px;
-    color: rgb(8, 106, 233)
+    color: rgb(8, 106, 233);
   }
 
   
@@ -58,35 +68,30 @@ body {
   }
 
 section.big-news {
- width: 600px;
+ width: 500px;
  padding: 20px;
  margin: 0;
  display: flex;
- box-sizing: border-box;
  flex-direction: column;
  align-items: center;
  justify-content: center; 
 }
 
- /*Set background-color to see section-Remove this later*/
-section {
-  background-color:none;
-}
 
 section.small-news {
-  width: 600px;
+ width: 500px;
  padding: 20px;
  margin: 0;
  display: flex;
- box-sizing: border-box;
  flex-direction: column;
  align-items: center;
  justify-content: center;
 }
 
 .article {
-  width: 500px;
+  width: 400px;
   padding: 25px;
+  margin-top: 15px;;
   background-color: white;
   box-shadow: 5px 7px 10px;
   font-size: 20px;
@@ -94,40 +99,40 @@ section.small-news {
 
 figure.big-news {
 background-color: white;
-width: 500px;
+width: 400px;
 padding: 25px;
 box-shadow: 5px 7px 10px;
 }
 
 figure.small-news {
   background-color: white;
-  width: 500px;
+  width: 400px;
   padding: 25px; 
+  margin-bottom: 40px;
   box-shadow: 5px 7px 10px;
 }
 
 .figcaption {
   font-family: 'Kalam', cursive;
-  font-size: 32px;
+  font-size: 24px;
 }
 
 img.big-news {
-  width: 500px;
+  width: 350px;
 }
 
 img.small-news {
-  width: 500px;
+  width: 350px;
 }
 
 /*Styling for tablet and small desktop*/
 @media (min-width:768px) and (max-width: 1200px) {
 
   .header {
-    box-sizing: border-box;
     display: grid;
     justify-content: center;
     height: 100px;
-    width: 100%;
+    width: 700px;
     margin: 0;
     border: 2px solid blue;
     grid-template-columns: 100px 100px 200px 100px 100px;
