--- a/code/style.css
+++ b/code/style.css
@@ -32,7 +32,6 @@ p {
 header {
   background: #14274e;
   color: #f1f6f9;
-  height: 60px;
   display: flex;
   align-items: center;
 }
@@ -52,6 +51,10 @@ nav a {
   text-decoration: none;
   font-size: 15px;
   padding: 0 15px;
+}
+
+nav a:hover {
+  background: #394867;
 }
 
 .menu-link {
@@ -82,7 +85,9 @@ nav a {
 }
 
 .big-news img {
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
 }
 
 .big-news-text {
@@ -111,6 +116,8 @@ footer {
   height: 200px;
   text-align: center;
   color:#f1f6f9;
+  display: flex;
+  flex-direction: column;
 }
 footer h3 {
   padding: 20px;
@@ -126,11 +133,7 @@ footer p {
 
 /**** MEDIA QUERIES ***/
 @media (min-width: 650px) {
-  /* header {
-     justify-content: space-between; 
-  } */
-
-  nav {
+   nav {
     display: inline-block;
     margin-left: auto;
   }
@@ -141,17 +144,16 @@ footer p {
 
   .big-news {
     flex-direction: row;
-    height: 300px;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 
   .big-news-text {
-    padding: 0px;
+    padding: 0px 30px 0 0;
   }
 
   .big-news div {
-    width: 47%;
+    width: 45%;
   }
 
   .small-news {
@@ -168,5 +170,11 @@ footer p {
 @media (min-width: 1024px) {
   .news-card {
     width: 25%;
+  }
+
+  footer {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
   }
 }
