--- a/code/style.css
+++ b/code/style.css
@@ -111,16 +111,29 @@ nav a:last-child {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  width: 90%;
+  width: 100%;
 }
 
 .small-news-container {
   box-shadow: -1px 10px 25px -6px rgba(133,124,124,0.72);
   border-radius: 7px;
-  padding: 40px;
   background: white;
   font-family: 'Montserrat', sans-serif;
   margin: 0 20px 60px 20px;
+  width: 400px;
+}
+
+.small-news-container img {
+  justify-content: center;
+}
+
+.small-news-container img {
+  width: 100%;
+  height: 30%;
+}
+
+.small-text {
+  padding: 30px;
 }
 
 /* MEDIA QUERIES */
@@ -158,7 +171,11 @@ nav a:last-child {
   }
 
   .small-news-container {
-    width: 200px;
+    width: 340px;
+  }
+
+  .small-news-container img {
+    height: 40%;
   }
 }
 
@@ -184,6 +201,10 @@ nav a:last-child {
   }
 
   .small-news-container {
-    width: 245px;
+    width: 300px;
+  }
+
+  .small-news-container img {
+    height: 40%;
   }
 }
