--- a/code/style.css
+++ b/code/style.css
@@ -128,18 +128,20 @@ img.small-news {
 /*Styling for tablet and small desktop*/
 @media (min-width:768px) and (max-width: 1200px) {
 
+
   .header {
     display: grid;
     justify-content: center;
     height: 100px;
-    width: 700px;
+    width: 100%;
     margin: 0;
     border: 2px solid blue;
-    grid-template-columns: 100px 100px 200px 100px 100px;
+    grid-template-columns: 100px 100px auto 100px 100px;
     grid-template-rows: 100px;
     grid-gap: 10px;
     grid-template-areas: 
     "navlink1 navlink2 logo navlink3 navlink4";
+    justify-content: center;
   }
 
   .navlink1, .navlink2, .navlink3, .navlink4 {
@@ -167,6 +169,7 @@ img.small-news {
   }
 
   .logo {
+    margin: 15px 0 0 0;
     grid-area: logo;
     justify-self: center;
   }
@@ -198,16 +201,16 @@ img.small-news {
   }
 
   img.big-news {
-    width: 300px;
+    width: 272px;
   }
 
   .article {
-    width: 400px;
+    width: 300px;
   }
 
   section.small-news {
     display: grid;
-    grid-template-columns:330px 330px;
+    grid-template-columns:300px 300px;
     grid-template-rows: 450px;
     row-gap: 20px;
     column-gap: 20px;
@@ -223,7 +226,7 @@ img.small-news {
   }
   
   img.small-news {
-    width: 300px;
+    width: 272px;
     margin: 0;
   }
 }
