--- a/code/style.css
+++ b/code/style.css
@@ -11,7 +11,7 @@ body {
 
 .container {
   width: 100%;
-  max-width: 2000px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -148,6 +148,24 @@ input:checked ~ .dropdown .dropdown-list {
 .read-more:hover, .read-more:focus {
   background:#fff;
 }
+/*** HIGHLIGHTS ***/
+
+.grid-container {
+  display: grid;
+  grid-gap: 5px;
+  grid-auto-rows: minmax(150px, auto);
+  padding: 0px 10px;
+}
+.each-highlight {
+  background-image: url(./northern_lights.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  /* margin: 0 10px; */
+}
 
 /*** ODINARY NEWS ***/
 .ordinary-news a {
@@ -276,6 +294,8 @@ input:checked ~ .dropdown .dropdown-list {
   .header-tablet {
     display: inline;
   } 
+
+  /** Media-tablet: Big-news section styling **/
   .big-news .container {
      text-align: left;
   }
@@ -285,6 +305,18 @@ input:checked ~ .dropdown .dropdown-list {
   .bignews-image:hover, .bignews-image:focus  {
     box-shadow: 0 4px 9px rgba(214, 238, 252, 0.91);
   }
+  /** Media-tablet: Highlights section styling **/
+
+  .grid-container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .highlight1 {
+    grid-row: 1/3;
+  }
+  .highlight2 {
+    grid-column: 2/4;
+  }
+
   .news {
     flex-wrap: wrap;
     flex-direction: row; 
