--- a/code/assets/css/animations.css
+++ b/code/assets/css/animations.css
@@ -1,9 +1,15 @@
 @keyframes shake {
-  from {
-    -webkit-transform: rotate(5deg);
+  0% {
+    -webkit-transform: scale(1);
   }
-  to {
-    -webkit-transform-origin: center center;
-    -webkit-transform: rotate(-5deg);
+
+  /* 50% {
+    -webkit-transform: scale(1.2);
+  } */
+  /* 50% {
+    -webkit-transform: scale(1.2) rotate(5deg);
+  } */
+  100% {
+    -webkit-transform: scale(1.2) rotate(-5deg);
   }
 }
