--- a/code/style.css
+++ b/code/style.css
@@ -16,12 +16,13 @@ body {
   
 }
 
+/* Container for all header content */
+
 .container {
   display: flex;
   justify-content: space-between;
-  max-width: 1600px;
-  height: auto;
-  margin: 20px;
+  width: 100%;
+  margin: 0 auto;
   
 }
 
@@ -50,3 +51,4 @@ body {
   margin-right: 5px;
   text-decoration: none;  
 }
+
