--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,282 @@
+/**************** BASE *****************/
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 html {
-  background: #0025ff;
+  box-sizing: border-box;
+  background: #fff;
+}
+
+body {
+  background: #000;
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+
+h1 {
+  font-family: helvetica;
+  font-weight: 500;
+  font-size: 2.5rem;
+  text-align: center;
+  color: #fee400;
+  margin: 50px 0 20px 0;
+}
+
+h2 {
+  font-family: helvetica;
+  font-weight: 400;
+  font-size: 2rem;
+  text-align: center;
+  color: #fee400;
+  margin: 32px 0 20px 0;
+}
+
+p {
+  font-family: helvetica;
+  font-weight: 300;
+  font-size: 1rem;
+}
+
+img {
+  width: 100%;
+  height: 250px;
+  max-width: 383px;
+}
+
+/**************** HEADER *****************/
+
+.header {
+  background: #fee400;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+  align-items: center;
+  padding: 0 16px;
+}
+
+.logo {
+  width: 100px;
+  height: 100px;
+  margin-left: 10px;
+}
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 24px;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background: #000;
+  border-radius: 5px;
+}
+
+.nav {
+  display: none;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: #000;
+  margin-left: 10px;
+  font-family: helvetica;
+  font-weight: 300;
+}
+
+.navbar a:hover {
+  background-color: #000;
+}
+
+/*************** SECTION - BIG NEWS ***************/
+
+.big-container {
+  margin: 10px;
+}
+
+.big-news-card {
+  background: #000;
+  height: 300px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 10px;
+  width: 100%;
+  text-decoration: none;
+  text-align: center;
   color: #fff;
+  box-shadow: 0px 3px 11px 5px rgba(254, 228, 0, 0.32);
+  padding: 20px 25px 20px 25px;
+}
+
+.headline-card {
+  line-height: 1.4;
+  text-align: justify;
+}
+
+.headline-h2 {
+  text-align: left;
+  margin: 27px 0 -11px 0;
+}
+
+.view-more {
+  background: #fee400;
+  color: #000;
+  padding: 2px;
+}
+
+.view-more:hover {
+  background-color: #fff;
+}
+
+/**************** SECTION - MEDIUM NEWS  *****************/
+.med-container {
+  margin: 10px;
+}
+
+.medium-news-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #000;
+  height: 310px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 10px;
+  width: 100%;
+  text-decoration: none;
+  text-align: center;
+  color: #fff;
+  box-shadow: 0px 3px 11px 5px rgba(254, 228, 0, 0.32);
+  padding: 10px;
+}
+
+.card-btn {
+  background: #fee400;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  margin-top: 5px;
+  font-family: helvetica;
+  font-weight: 300;
+  font-size: 1rem;
+}
+
+.card-btn:hover {
+  background-color: #fff;
+}
+/**************** SECTION - SMALL NEWS - GRID **************** */
+
+.small-container {
+  margin: 10px;
+}
+
+.small-news-card {
+  background: #000;
+  height: 230px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 10px;
+  width: 100%;
+  text-decoration: none;
+  text-align: center;
+  color: #fff;
+  box-shadow: 0px 3px 11px 5px rgba(254, 228, 0, 0.32);
+  padding: 16px;
+}
+
+.card-gif {
+  width: 100%;
+  /* max-width: 320px; */
+  max-height: 200px;
+}
+
+/*** FOOTER ***/
+
+.footer {
+  background: #fee400;
+  width: auto;
+  height: 100px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 16px;
+}
+
+.footer-text {
+  margin-left: 20px;
+}
+.footer a {
+  color: #000;
+  margin-left: 10px;
+}
+
+/**************** MEDIA QUERIES *****************/
+
+/**** Tablet - 2 Columns ****/
+@media (min-width: 750px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+  .nav {
+    display: inline-block;
+  }
+  .hamburger {
+    display: none;
+  }
+  .big-container {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .image-card {
+    width: 50%;
+    margin-right: 10px;
+  }
+  .headline-card {
+    background: #000;
+    width: 100%;
+  }
+  .med-container {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  .medium-news-card {
+    flex: 0 0 48%;
+  }
+  .small-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+}
+
+/**** Small Desktop - 4 Columns ****/
+@media all and (min-width: 920px) {
+  .medium-news-card {
+    background: #000;
+    flex: 0 0 24%;
+  }
+  .small-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+}
+
+/*** Large Desktop ***/
+@media (min-width: 1200px) {
+  /* add max-width for div */
 }
