--- a/code/style.css
+++ b/code/style.css
@@ -289,8 +289,10 @@ a {
     width: 410px;
   }
 
-  .main-article-text {
+  div.main-article-text {
     padding: 10px;
+    max-width: 350px;
+    max-height: 350px;
   }
 
   hr.line {
