--- a/code/style.css
+++ b/code/style.css
@@ -19,42 +19,53 @@ html {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   font-family: 'Playfair Display', serif;
   font-style: italic;
   line-height: 1.4;
 }
 
 h1 {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+}
+
+h2 {
+  font-size: 1rem;
 }
 
 h3 {
-  font-size: .8rem;
+  font-size: 1rem;
   font-weight: 500;
+}
+
+h4 {
+  font-size: .8rem;
 }
 
 p {
   font-family: 'Playfair Display', serif;
-  font-size: .8rem;
+  font-size: 1rem;
   line-height: 1.5;
   margin-top: .5rem;
 }
 
 .podcasts p {
-  font-size: .6rem;
+  font-size: .7rem;
   margin: 0;
+  line-height: 1.3;
 }
 
-.optional.text h1,
-.full-length-news h1 {
-  font-size: .85rem;
-}
-
-.optional.text p,
-.full-length-news p {
+p.small {
   font-size: .75rem;
-  /* line-height: 1.6; */
+}
+
+/* Lottie animation */
+
+.lottie {
+  margin: 0 auto;
+  margin-right: .5rem;
+  width: 50px;
 }
 
 /* HOVER EFFECT - FAKE LINKS... */
@@ -85,7 +96,7 @@ header {
   height: 100%;
   min-width: 40px;
   flex-basis: 1;
-  padding: 10px;
+  padding: 10px 10px 0 0;
 }
 
 header 
@@ -152,15 +163,24 @@ header > .middle > img {
   margin: .25rem .125rem 0 auto;
 }
 
-.date, .weather {
+.date {
   display: none;
   height: 1rem;
   width: 100%;
-  font-size: 0.7rem;
   margin-top: 1rem;
+  font-size: 0.7rem;
 }
 
 .weather {
+  display: none;
+  /* height: 1rem; */
+  /* width: 100%; */
+  /* margin-top: 1rem; */
+  /* font-size: 0.7rem; */
+}
+
+.weather-text {
+  font-size: 0.7rem;
   text-align: right;
 }
 
@@ -201,13 +221,18 @@ nav ul li {
 }
 
 .divider {
+  /* display: none; */
   height: 1px;
-  margin: .5rem -1.5rem;
+  margin: 1rem -1.5rem;
   background-color: rgb(0, 0, 0);
 }
 
 .divider.no-marg {
   margin: 0 -1.5rem;;
+}
+
+main .divider {
+  display: none;
 }
 
 /* MAIN-SECTION */
@@ -232,7 +257,7 @@ nav ul li {
   flex-grow: 1;
   height: 3rem;
   width: 20rem;
-  margin: .5rem .25rem 0 .25rem;
+  margin: .5rem .25rem;
   display: flex;
   overflow: hidden;
   border-right: 1px solid grey;
@@ -266,6 +291,7 @@ section
 }
 
 .story {
+  margin-top: 3rem;
   display: flex;
   flex-direction: column-reverse;
   /* border: 1px solid pink; */
@@ -279,7 +305,7 @@ section
   transition: .1s ease-in-out;
   display: flex;
   flex-direction: column;
-  height: 100vw;
+  /* height: 100vw; */
   gap: .5rem;
   margin-top: .5rem;
 }
@@ -338,9 +364,20 @@ footer {
     padding: 0 1rem;
   }
 
+  p {
+    font-family: 'Playfair Display', serif;
+    font-size: .8rem;
+    line-height: 1.5;
+    margin-top: .5rem;
+  }
+  
    section .image {
     width: 0;  
     min-width: 10rem;
+  }
+
+  .story {
+    margin: 0;
   }
 
   header {
@@ -351,6 +388,10 @@ footer {
 
   header > .middle {
     width: 14rem;
+  }
+
+  .right {
+    flex-direction: column;
   }
   
   .right > .hamburger {
@@ -363,12 +404,17 @@ footer {
   .full-length-news {
     display: initial;
   }
+
+  main .divider {
+    display: block;
+  }
      
   .top-news {
     flex-direction: row;
     max-height: 25rem;
+    height: 100vw;
   }
-    
+
   .small-news {
     flex-direction: row;
     flex-wrap: wrap;
@@ -402,10 +448,14 @@ footer {
   .middle > 
   .super-menu,
   .date, 
-  .weather, 
   .top-news .optional  {
     display: initial;
   }
+
+  .weather {
+    display: block;
+  }
+
   
   header > .middle{
     width: 27rem;
