--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,6 @@
  
   
+  
  html  {
 
   background-color: #eeeeee;
@@ -55,7 +56,7 @@
     }
 
 
-    @media (min-width: 768px) and max {
+    @media (min-width: 768px) {
      
       .navigation-item {
 
@@ -123,8 +124,7 @@
  
  }
  
-
-.Text {
+ .Text {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
@@ -132,13 +132,70 @@
   margin-top: 600px;
 }
 
+
 .container {
     display:flex;
-    flex-direction:column;
     width: 20%;
+    flex-direction: column;
     text-align: justify;
 
 }
+
+
+@media (min-width: 768px) and (max-width:991px) {
+
+.container{
+
+   display:flex;
+   width: 40%;
+   margin: 5px;
+   
+}
+
+  .image {
+
+  flex-direction: row;
+  flex-wrap: wrap;
+
+}
+
+
+  .news-cardthree {
+
+
+    flex-direction: row;
+   
+    flex-wrap: wrap;
+
+  }
+
+}
+
+@media (min-width: 1200px) {
+
+  .image {
+
+    width: 100%;
+    height: 100px;
+  }
+
+  .news-cardthree {
+
+    width: 100%;
+    height: 100px;
+
+
+  }
+
+
+}
+
+
+
+
+
+
+
 
 
 @media (max-width: 767px) {
@@ -240,4 +297,3 @@
   }
   
   
-
