--- a/code/style.css
+++ b/code/style.css
@@ -40,6 +40,7 @@
 
     }
 
+   /* Response view for NAV*/
 
     @media (max-width: 767px) {
 
@@ -141,6 +142,24 @@
 
 }
 
+/*mobile view for table-small news articles*/
+
+@media (max-width: 767px) {
+
+  .container { 
+    
+  width: 100%;
+  height: 400px;
+  margin: 5px;
+  flex-direction: column;
+  
+
+}
+
+    }  
+
+
+/*tablet view for small news articles*/
 
 @media (min-width: 768px) and (max-width:991px) {
 
@@ -189,29 +208,6 @@
 
 
 }
-
-
-
-
-
-
-
-
-
-@media (max-width: 767px) {
-
-  .container { 
-    
-  width: 100%;
-  height: 400px;
-  margin: 5px;
-  flex-direction: column;
-  
-
-}
-
-    }  
-
 
 
 
@@ -295,5 +291,6 @@
       height: auto;
       min-height: 100%;
   }
+  
   
   
