--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,43 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  background: rgb(194, 158, 194);
+}
+
+ /*Navbar*/
+nav{
+  display: flex;
+  align-items: center;
+  margin:10px 5px;
+}
+
+.logo{
+  width:50px;
+  height:50px;
+}
+
+h1{
+  margin: 10px 50px;
+  
+}
+
+a{
+  margin: 10px;
+}
+
+/*Big News*/
+.big-news {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+   background-image: url("peace.jpg");
+   background-repeat: no-repeat;
+   background-position: center center;
+   background-size: 100%;
+   border: 20px solid black;
+
+}
+
+/*Small New*/
+.small-news {
+display: flex;
 }
