styled the small-news-container with the background color white

--- a/code/style.css
+++ b/code/style.css
@@ -39,6 +39,8 @@ body {
   background-color: white;
   padding: 15px;
   display: flex;
+  /* justify-content: center; */
+  /* align-items: center; */
 }
 
 .img-container-one {
@@ -48,4 +50,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+/* Small-article-news */
+
+.small-news-container {
+  background-color: white;
 }
